--- a/Slave/Makefile
+++ b/Slave/Makefile
@@ -5,10 +5,10 @@ ALTERNATE_CORE_PATH = ../Sanguino
 ARDUINO_VAR_PATH    = ../Sanguino/variants
 ARDUINO_CORE_PATH   = ../Sanguino/cores/arduino
 BOOTLOADER_PARENT   = ../Sanguino/bootloaders
-ARDUINO_PORT   = /dev/serial/by-id/usb-FTDI_FT232R_USB_UART_AH01QH7S-if00-port0
+ARDUINO_PORT   = /dev/serial/by-id/usb-FTDI_FT232R_USB_UART_A6039LM0-if00-port0
 AVRDUDE_ARD_PROGRAMMER = stk500v1
 MONITOR_BAUDRATE = 115200
-EXTRA_FLAGS    = -std=c++11
+EXTRA_FLAGS    = -DSLAVE -Os -std=c++11
 AVRDUDE_OPTS   = -V
 
 include /usr/share/arduino/Arduino.mk
