Include the common/shared Packet library

--- a/Marlin/Makefile
+++ b/Marlin/Makefile
@@ -1,5 +1,5 @@
 BOARD_TAG      = atmega1284
-ARDUINO_LIBS   =
+ARDUINO_LIBS   = Packet
 ALTERNATE_CORE = Sanguino
 ALTERNATE_CORE_PATH = /usr/share/arduino/hardware/Sanguino
 ARDUINO_VAR_PATH    = /usr/share/arduino/hardware/Sanguino/variants
@@ -10,5 +10,7 @@ AVRDUDE_ARD_PROGRAMMER = stk500v1
 MONITOR_BAUDRATE = 115200
 EXTRA_FLAGS    = -std=c++11
 AVRDUDE_OPTS   = -V
+
+USER_LIB_PATH := $(realpath ../common)
 
 include /usr/share/arduino/Arduino.mk
