Sanguinolulu has some conflicting defines, this supresses the warnings

--- a/Marlin/Makefile
+++ b/Marlin/Makefile
@@ -8,7 +8,7 @@ BOOTLOADER_PARENT   = /usr/share/arduino/hardware/Sanguino/bootloaders
 ARDUINO_PORT   = /dev/serial/by-id/usb-FTDI_FT232R_USB_UART_AH01QH7S-if00-port0
 AVRDUDE_ARD_PROGRAMMER = stk500v1
 MONITOR_BAUDRATE = 115200
-EXTRA_FLAGS    = -std=c++11
+EXTRA_FLAGS    = -std=c++11 -Wp,-w
 AVRDUDE_OPTS   = -V
 
 USER_LIB_PATH := $(realpath ../common)
