Optimize for speed, not size

--- a/Marlin/Makefile
+++ b/Marlin/Makefile
@@ -10,6 +10,7 @@ AVRDUDE_ARD_PROGRAMMER = stk500v1
 MONITOR_BAUDRATE = 115200
 EXTRA_FLAGS    = -std=c++11 -Wp,-w
 AVRDUDE_OPTS   = -V
+OPTIMIZATION_LEVEL=3
 
 USER_LIB_PATH := $(realpath ../common)
 
