--- a/Slave/Makefile
+++ b/Slave/Makefile
@@ -1,5 +1,5 @@
 BOARD_TAG      = atmega1284
-ARDUINO_LIBS   =
+ARDUINO_LIBS   = Packet
 ALTERNATE_CORE = Sanguino
 ALTERNATE_CORE_PATH = /usr/share/arduino/hardware/Sanguino
 ARDUINO_VAR_PATH    = /usr/share/arduino/hardware/Sanguino/variants
@@ -8,7 +8,7 @@ BOOTLOADER_PARENT   = /usr/share/arduino/hardware/Sanguino/bootloaders
 ARDUINO_PORT   = /dev/serial/by-id/usb-FTDI_FT232R_USB_UART_A6039LM0-if00-port0
 AVRDUDE_ARD_PROGRAMMER = stk500v1
 MONITOR_BAUDRATE = 115200
-EXTRA_FLAGS    = -std=c++11 -Wp,-w
+CPPFLAGS    += -DMARLIN_SLAVE
 AVRDUDE_OPTS   = -V
 
 USER_LIB_PATH := $(realpath ../common)
